<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/goToItemChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:backgroundTint="@color/primaryDarkColor"
            android:fontFamily="@font/fontinsmallcaps"
            android:text="@string/main_search_items_button"
            app:icon="@drawable/search_24"
            app:iconPadding="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/goToCurrencyChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/primaryDarkColor"
            android:fontFamily="@font/fontinsmallcaps"
            android:text="@string/main_exchange_currency_button"
            app:icon="@drawable/exchange_24"
            app:iconPadding="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/goToCharts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/primaryDarkColor"
            android:fontFamily="@font/fontinsmallcaps"
            android:text="@string/main_charts_button"
            app:icon="@drawable/charts_24"
            app:iconPadding="0dp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>